# ZAAI-SYSTEM

./: .bash_history  .editorconfig  .gitattributes  .gitconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  ZAAI_ScrollDaemon.ipynb  phoenix_blockchain_anchor.py  pyproject.toml  requirements.txt  vault_sync_engine.py.save
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: validate.yml
.ssh/: id_ed25519.pub
storage/: external-1
